--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,8 +6,14 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
+
     steps:
-    - name: Compose
-      run: |
-        docker compose version
-        docker compose ps
+      - name: Check out the repo
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Compose
+        run: |
+          docker compose version
+          docker compose up
